button and quote style

--- a/index.css
+++ b/index.css
@@ -14,7 +14,19 @@
   
   /* Button */
   .button {
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 25px;
+    color: #000;
+    font-weight: 200;
+    padding: 20px;
+    margin: 5% 34.4%;
+    margin-top: 7%;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    border-width: 2px;
   }
   
   /* Header */
@@ -45,10 +57,12 @@
   .top {
     background-color: rgba(1, 1, 1, 0.25) !important;
     color: #fff;
-    font-size: 80px;
+    font-size: 50px;
     font-weight: bold;
     height: 750px;
     padding-top: 30px;
+    padding-left: 25%;
+    padding-right: 25%;
   }
   
   /* Below the image */
