--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@
   /* Navbar */
   .bar {
     font-size: 40px !important;
+    color: #fff;
+    padding: 8px;
   }
   .navbar {
     background-color: #000 !important;
@@ -43,7 +45,7 @@
   }
   /* Figure out how to change the image with javascript 2 lines below */
   .first {
-    background-image: url(); 
+    background-image: url(images/background4.png); 
     width: 100%;
     height: 100%;
     background-attachment: fixed;
@@ -60,7 +62,7 @@
     font-size: 50px;
     font-weight: bold;
     height: 750px;
-    padding-top: 30px;
+    padding-top: 10%;
     padding-left: 25%;
     padding-right: 25%;
   }
