--- a/index.css
+++ b/index.css
@@ -16,26 +16,29 @@
   
   /* Button */
   .button {
-    background-color: #fff;
+    /* background-color: rgba(1, 1, 1, 0.25) !important; */
     border-color: #fff;
     border-radius: 25px;
     color: #000;
     font-weight: 200;
     padding: 20px;
-    margin: 5% 34.4%;
     margin-top: 7%;
+    margin-bottom: 7%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 24px;
+    font-size: 20px;
     border-width: 2px;
+  }
+  .button-block {
+    background-color: rgba(1, 1, 1, 0.25) !important;
   }
   
   /* Header */
   .header {
     color: #fff;
     margin: 0.5em;
-    padding-top: px;
+    /* padding-top: 0px; */
     background-color: #000;
   
     display: flex;
@@ -45,7 +48,7 @@
   }
   /* Figure out how to change the image with javascript 2 lines below */
   .first {
-    background-image: url(images/background4.png); 
+    /* background-image: url(images/background4.png);  */
     width: 100%;
     height: 100%;
     background-attachment: fixed;
@@ -59,12 +62,16 @@
   .top {
     background-color: rgba(1, 1, 1, 0.25) !important;
     color: #fff;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bold;
-    height: 900px;
+    height: 650px;
     padding-top: 10%;
     padding-left: 25%;
     padding-right: 25%;
+    padding-bottom: 50%;
+  }
+  .quoteFont {
+    font-family: 'Damion', cursive;
   }
   
   /* Below the image */
@@ -77,6 +84,7 @@
   }
   .content {
     justify-content: center;
+    background-color: rgba(1, 1, 1, 0.25) !important;
   }
   .large {
     font-size: 42px;
@@ -119,6 +127,9 @@
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+    .top {
+      font-size: 35px;
+    }
 }
 
 /* Mobile Styles */
@@ -134,7 +145,7 @@
     font-size: 20px;
 }
 .top {
-  font-size: 30px;
+  font-size: 35px;
 }
 .small {
   padding-left: 12%;
@@ -150,6 +161,9 @@
 }
 .first {
   font-size: 20px;
+}
+.top {
+  font-size: 35px;
 }
 }
 
